# Turing_Machine

./: CMakeLists.txt  README.md  Req_Spec_Revised.docx  Source_Code.docx
Implementation_Docs/: Design_Revised.docx  Testing_Procedure.docx
Include/: Crash.h  Final_States.h  Input_Alphabet.h  States.h  TM_Utils.h  Tape.h  Tape_Alphabet.h  Transition.h  Transition_Function.h  Turing_Machine.h
Src/: Crash.cpp  Final_States.cpp  Input_Alphabet.cpp  Main.cpp  States.cpp  TM_Utils.cpp  Tape.cpp  Tape_Alphabet.cpp  Transition.cpp  Transition_Function.cpp  Turing_Machine.cpp
